feat - add api + fix
