# backend/src/routers/posts.ts
@@ -11,7 +11,7 @@ postsRouter.get("/:id", postsController.getPost);
 
 postsRouter.post("/add", jsonParser, postsController.addPost);
 
-postsRouter.patch("/update/:id", jsonParser, postsController.updatePost);
+postsRouter.patch("/update", jsonParser, postsController.updatePost);
 
 postsRouter.delete("/delete/:id", postsController.deletePost);
 
